fixed modals on mobile

--- a/vite-project/src/assets/styles/basics/_base.scss
+++ b/vite-project/src/assets/styles/basics/_base.scss
@@ -61,8 +61,7 @@ body[dir="ltr"] {
 }
 
 .history-txt__header{
-    // margin-bottom: -20px;
-}
+padding-top:20px ;}
 
 .search-btn{
     color: $clr-white;
