--- a/vite-project/src/assets/styles/cmps/details/_ImgUseGrid.scss
+++ b/vite-project/src/assets/styles/cmps/details/_ImgUseGrid.scss
@@ -9,6 +9,7 @@
     max-height: 451.39px;
     height: calc(100% / 2);
     overflow: hidden;
+    cursor: pointer;
 
     // &::after {
     //     content: "";
