--- a/vite-project/src/assets/styles/cmps/reveiws/ModalReviews.scss
+++ b/vite-project/src/assets/styles/cmps/reveiws/ModalReviews.scss
@@ -119,5 +119,6 @@
     .modal-content {
     width: 100% !important;
     height: 100% !important;
+    border-radius: 0 !important;
     }
 }
